style.css
:root {
    --bg-color: hsl(0, 0%, 100%);
    --text-color: hsl(0, 0%, 0%);
    --badge-text-color: hsl(0, 0%, 57%);
    --stroke-color: hsl(0, 0%, 57%);
    --frame-color: hsl(24, 15%, 94%);
    --small-text: hsl(0, 0%, 44%);
    --success-color: hsl(164, 70%, 24%);
    --success-color-bg: hsla(164, 70%, 24%, 0.1);
    --danger-color: hsl(352, 93%, 53%);
    --danger-color-bg: hsla(352, 93%, 53%, 0.1);

    --shadow-color: 24deg 6% 58%;

    --shadow-elevation-low:
        0.3px 0.5px 0.7px hsl(var(--shadow-color) / 0.34),
        0.4px 0.8px 1px -1.2px hsl(var(--shadow-color) / 0.34),
        1px 2px 2.5px -2.5px hsl(var(--shadow-color) / 0.34);

    --shadow-elevation-medium:
        0.3px 0.5px 0.7px hsl(var(--shadow-color) / 0.36),
        0.8px 1.6px 2px -0.8px hsl(var(--shadow-color) / 0.36),
        2.1px 4.1px 5.2px -1.7px hsl(var(--shadow-color) / 0.36),
        5px 10px 12.6px -2.5px hsl(var(--shadow-color) / 0.36);

    --shadow-elevation-high:
        0.3px 0.5px 0.7px hsl(var(--shadow-color) / 0.34),
        1.5px 2.9px 3.7px -0.4px hsl(var(--shadow-color) / 0.34),
        2.7px 5.4px 6.8px -0.7px hsl(var(--shadow-color) / 0.34),
        4.5px 8.9px 11.2px -1.1px hsl(var(--shadow-color) / 0.34),
        7.1px 14.3px 18px -1.4px hsl(var(--shadow-color) / 0.34),
        11.2px 22.3px 28.1px -1.8px hsl(var(--shadow-color) / 0.34),
        17px 33.9px 42.7px -2.1px hsl(var(--shadow-color) / 0.34),
        25px 50px 62.9px -2.5px hsl(var(--shadow-color) / 0.34);
}


body {
    position: relative;
    font-family: "Karla", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    margin: 0;
}

header {
    position: sticky;
    width: 100%;
    top: 0;
    z-index: 80;
    background: var(--text-color);
    color: var(--bg-color);
    padding: clamp(1rem, 0.8rem + 1vw, 2rem);

    display: flex;
    justify-content: space-between;
    gap: 2rem;

    box-shadow: var(--shadow-elevation-low);
}

header .logo {
    font-weight: 500;
    display: flex;
    gap: clamp(0.25rem, 0.2rem + 0.25vw, 0.5rem);
    flex: 0;
}

h1 {
    font-size: 3rem;
    text-transform: uppercase;
}

.letters {
    font-size: clamp(2rem, 1.6rem + 2vw, 4rem);
    font-weight: 700;
    flex: 1;
    letter-spacing: 0.25rem;
}

.logo .divider:nth-child(5) {
    transform-origin: bottom;
    /* transform: rotate(-7deg) */
}

.logo .divider:nth-child(3) {

    transform-origin: bottom;
    /* transform: scaleY(90%) */
}

.divider {
    background-color: var(--bg-color);
    width: clamp(0.25rem, 0.2rem + 0.25vw, 0.5rem);
}

button.new-book {
    font-size: clamp(0.75rem, 0.6rem + 0.75vw, 1.5rem);
    font-weight: 800;
    background-color: var(--text-color);
    color: var(--bg-color);
    border: 0.25rem solid var(--bg-color);
    flex: 1;
    max-width: 16rem;

    /* transition: all 0.3s ease-in; */
}

button.new-book:hover {
    background-color: var(--bg-color);
    color: var(--text-color);
}

/* library style */

.bookshelf {
    flex: 1;
    padding: clamp(1rem, 0.75rem + 1.25vw, 2.25rem);
    display: grid;
    gap: clamp(2.5rem, 2.2rem + 1.5vw, 4rem) clamp(1rem, 0.8rem + 1vw, 2rem);
    grid-template-columns: repeat(auto-fill, minmax(316px, 1fr));
}

.placeholder {
    margin: clamp(1rem, 0.75rem + 1.25vw, 2.25rem);
    padding: 1.125rem;
    padding-bottom: 2.5rem;
    display: flex;
    border: 1px solid var(--stroke-color);
    background-color: var(--frame-color);
    border-radius: 1rem;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
}

@keyframes fadeInVariant {
    0% {
        opacity: 0;
        transform: translateY(2rem);
    }
    100% {
        opacity: 1;
        transform: translateY(0);
    }
}

@keyframes booksprite {
    from {
        object-position: 0% 0%;
    }

    to {
        object-position: 100% 0%;
    }
}

.booksprite {
    margin: 0 auto;
    filter: grayscale() contrast(2);
    width: 250px;
    height: 250px;
    object-fit: cover;
    animation: booksprite 1s steps(5, jump-end) forwards;
}

.placeholder div {
    display: flex;
    flex-flow: column wrap;
    align-items: center;
}

.placeholder h3 {
    font-size: clamp(1.75rem, 1.6rem + 0.75vw, 2.5rem);
}

.placeholder p {
    display: flex;
    gap: .5rem;
}

.span-button {
    font-family: monospace;
    background-color: var(--text-color);
    color: var(--bg-color);
    padding: .125rem .25rem;
    border-radius: .25rem;
}

.book-entry {
    position: relative;
    max-width: 100%;
    min-height: clamp(24rem, 21.6rem + 12vw, 36rem);
    display: grid;
    align-items: start;
    grid-template-rows: 474px 1fr;
    gap: 1rem;
    animation: fadeInVariant 0.4s;
}

.book-ui {
    position: absolute;
    top: 1rem;
    padding: 0 clamp(2rem, 1.8rem + 1vw, 3rem) 0 clamp(2rem, 1.8rem + 1vw, 3rem);
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.book-ui .status-ui {
    display: flex;
    gap: .5rem
}

.deleteBook,
.changeStatus {
    background-color: var(--bg-color);
    padding: .25rem;
    border: 1px solid var(--stroke-color);
    border-radius: 0.25rem;

    transition: all 0.3s cubic-bezier(0.23, 1, 0.320, 1);
}

.deleteBook>svg,
.changeStatus>svg {
    width: 1.5rem;
    height: 1.5rem;

    pointer-events: none;
}

.deleteBook:hover,
.changeStatus:hover {
    background: var(--danger-color);
    fill: var(--bg-color);
    box-shadow: var(--shadow-elevation-low);
    border-color: transparent;
}


.book-entry .readStatus {
    padding: 0.25rem 0.5rem;
    border: 1px solid var(--stroke-color);
    border-radius: 0.25rem;
    background-color: var(--bg-color);
    color: var(--badge-text-color);
    display: flex;
    align-self: start;
    justify-self: center;
}
/* ... */

